--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <div class="col-sm-6 col-xs-8">
                        <div class="social">
                             <ul class="social-share">
-                                <li><a href="https://www.facebook.com/TranslationsChileGlobal/"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="twitter.com/ch_translate"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
+                                <li><a href="https://www.facebook.com/TranslationsChileGlobal/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/ch_translate" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://cl.linkedin.com/in/michael-truitt-johnson-b6466b6a" target="_blank"><i class="fa fa-linkedin"></i></a></li> 
                                 <li><a href="#"><i class="fa fa-skype"></i></a></li>
                             </ul>
                        </div>
@@ -60,7 +60,8 @@
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="#feature">Acerca de Nosotros</a></li>
                         <li><a href="#services">Servicios</a></li>
-                        <li><a href="contact-us.html">Contacto</a></li>                        
+                        <li><a href="#middle">Experiencia</a></li>
+                        <li><a href="#main-contact-form">Contacto</a></li>                        
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -83,7 +84,8 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content" >
                                     <h1 class="animation animated-item-1" style="color: black" >Traducciones Chile Global</h1>
-                                    <h2 class="animation animated-item-2" style="color: black; text-align: center">La Agencia que te acompaña hacia el éxito internacional</h2> 
+                                    <h2 class="animation animated-item-2" style="color: black; text-align: center">La Agencia que te acompaña hacia el éxito internacional</h2>
+                                    <button type="button" class="btn btn-danger active btn-lg"><a href="#main-contact-form" class="boton">Cotice con nosotros</a></button> 
                                 </div>
                             </div>
                         </div>
@@ -179,8 +181,9 @@
                             <img class="img-responsive" src="images/services/interprete.png" height="80px" width="80px">
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Servicio de Interpretes</h3>
+                            <h3 class="media-heading">Servicio de Intérpretes</h3>
                             <p>Te proponemos el método de interpretación que mejor se adapte a tus necesidades y al contexto de tu evento</p>
+                            <br>
                         </div>
                     </div>
                 </div>
@@ -202,7 +205,7 @@
                         <div class="progress-wrap">
                             <h3>Traducciones Jurídicas</h3>
                             <div class="progress">
-                              <div class="progress-bar  color1" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                              <div class="progress-bar  color1" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
                            <!--     <span class="bar-width">90%</span>-->
                               </div>
 
@@ -418,8 +421,8 @@
     <section id="partner">
         <div class="container">
             <div class="center wow fadeInDown">
-                <h2>Our Partners</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <h2>Clientes</h2>
+                <h3 style="color: #fff">Confían en nosotros</h3>
             </div>    
 
             <div class="partners">
@@ -443,16 +446,18 @@
                             <i class="fa fa-phone"></i>
                         </div>
                         <div class="media-body">
-                            <h2>Have a question or need a custom quote?</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation +0123 456 70 80</p>
+                            <h2>Necesita más información?</h2>
+                            <p>Ponte en contacto con nosotros sin ningún compromiso completando el siguiente formulario y explícanos el servicio que tu empresa u organización necesita, Uno de nuestros coordinadores le contactará en menos de 30 minutos</p>
                         </div>
+
+
                     </div>
                 </div>
             </div>
         </div><!--/.container-->    
     </section><!--/#conatcat-info-->
 
-    <section id="bottom">
+  <!--  <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -470,7 +475,7 @@
                     </div>    
                 </div><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
+           <!--     <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h3>Support</h3>
                         <ul>
@@ -485,7 +490,7 @@
                     </div>    
                 </div><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
+            <!--    <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h3>Developers</h3>
                         <ul>
@@ -500,7 +505,7 @@
                     </div>    
                 </div><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
+             <!--   <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h3>Our Partners</h3>
                         <ul>
@@ -517,19 +522,108 @@
             </div>
         </div>
     </section><!--/#bottom-->
+    <div class="container">
+      <form class="well form-horizontal" action=" " method="post"  id="main-contact-form">
+        <fieldset>
 
+          <!-- Form Name -->
+          <legend>Contactenos!</legend>
+
+          <!-- Text input-->
+
+          <div class="form-group">
+            <label class="col-md-4 control-label">Nombre</label>  
+            <div class="col-md-4 inputGroupContainer">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                <input  name="first_name" placeholder="Nombre" class="form-control"  type="text" required="required">
+              </div>
+            </div>
+          </div>
+
+          <!-- Text input-->
+
+          <div class="form-group">
+            <label class="col-md-4 control-label" >Apellido</label> 
+            <div class="col-md-4 inputGroupContainer">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                <input name="last_name" placeholder="Apellido" class="form-control"  type="text" required="required">
+              </div>
+            </div>
+          </div>
+
+          <!-- Text input-->
+          <div class="form-group">
+            <label class="col-md-4 control-label">E-Mail</label>  
+            <div class="col-md-4 inputGroupContainer">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                <input name="email" placeholder="E-Mail Address" class="form-control"  type="text" required="required">
+              </div>
+            </div>
+          </div>
+
+
+          <!-- Text input-->
+
+          <div class="form-group">
+            <label class="col-md-4 control-label">Phone #</label>  
+            <div class="col-md-4 inputGroupContainer">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                <input name="phone" placeholder="(+56)9999-9999" class="form-control" type="text">
+              </div>
+            </div>
+          </div>
+
+          <!-- Text input-->
+          <div class="form-group">
+            <label class="col-md-4 control-label">Compartir archivo a cotizar</label>  
+            <div class="col-md-4 inputGroupContainer">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
+                <input name="website" placeholder="Copie Link a Google Drive" class="form-control" type="text">
+              </div>
+            </div>
+          </div>
+
+          <!-- Text area -->
+
+          <div class="form-group">
+            <label class="col-md-4 control-label">Hablenos de su proyecto</label>
+            <div class="col-md-4 inputGroupContainer">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                <textarea class="form-control" name="comment" placeholder="Project Description" tabindex="5" required="required"></textarea>
+              </div>
+            </div>
+          </div>
+
+          <!-- Button -->
+          <div class="form-group">
+            <label class="col-md-4 control-label"></label>
+            <div class="col-md-4">
+              <button type="submit" class="btn btn-warning" >Enviar <span class="glyphicon glyphicon-send"></span></button>
+            </div>
+          </div>
+
+        </fieldset>
+      </form>
+    </div>
+    </div><!-- /.container -->
     <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    &copy; 2017 <a target="_blank" href="#">Traducciones Chile Global spa</a>. All Rights Reserved.
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#main-slider">Home</a></li>
+                        <li><a href="#feature">Acerca de Nosotros</a></li>
+                        <li><a href="#services">Servicios</a></li>
+                        <li><a href="#">Contacto</a></li>
                     </ul>
                 </div>
             </div>
